Added some units tests and fixed resulting bugs

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,7 +2,7 @@ FROM debian:latest
 
 # Install packages
 RUN DEBIAN_FRONTEND=noninteractive apt update -qq && apt upgrade -yqq \
-    && apt install -yqq sudo build-essential cmake git ninja-build clang clang-tidy clang-format
+    && apt install -yqq sudo build-essential cmake git ninja-build clang clang-tidy clang-format gdb libgtest-dev
 
 # Add non-root user
 ARG USERNAME
