--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,13 @@
 cmake_minimum_required(VERSION 3.18)
 
-project (shared_vector VERSION 1.0 LANGUAGES CXX)
+set(PROJECT_NAME "shared_vector")
+project(${PROJECT_NAME} VERSION 1.0 LANGUAGES CXX)
 
 add_compile_options(-Wall -Wextra -Wpedantic -Werror)
 
-add_subdirectory(tests)
 add_subdirectory(src)
+
+if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND BUILD_TESTING)
+    include(CTest)
+    add_subdirectory(tests)
+endif()
